fix: fix the footer align issue

--- a/src/page/component/footer/Footer.css
+++ b/src/page/component/footer/Footer.css
@@ -17,6 +17,7 @@
 
 .App-footer-div{
   font-size: 15px;
+  display: flex;
 }
 
 .contact{
